se agrego descripcion a portafolio

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>RELLENAR</p>
+          <p>In this section I show the latest projects in which I have worked, applying the knowledge acquired.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -346,7 +346,6 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Rellenar</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
