--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Wilson Hilario</h1>
-      <p>I'm <span class="typed" data-typed-items="Developer, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="web Developer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>rellenar</p>
+          <p>I am a software engineering student with more than 3 years of experience in the workplace, with C# as the main language. As a professional approach, I always try to be at the forefront in terms of the technologies I handle, as well as, interested in the continuous learning of new technologies and better work practices.</p>
         </div>
 
         <div class="row">
@@ -92,7 +92,7 @@
           </div>
 
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3> Desktop &amp; Web Developer.</h3>
+            <h3> Web Developer.</h3>
             <p class="fst-italic">
               Rellenar
             </p>
@@ -113,11 +113,10 @@
               </div>
             </div>
             <p>
-              rellenar
+              rdddellenar
             </p>
 
             <!-- languaje circle -->
-
             
 
 
