agregado referencias de portafolio details a index

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Wilson Hilario</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -57,12 +57,15 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="/index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="/index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="/index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-          <li><a href="/index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
-          <li><a href="/index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="/index.html#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
+          <!-- href="/index.html#hero" local
+          href="/Portafolio#hero" host
+          -->
+          <li><a href="/Portafolio#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/Portafolio#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="/Portafolio#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+          <li><a href="/Portafolio#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
+          <li><a href="/Portafolio#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="/Portafolio#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
