agregado referencias de portafolio details a index

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -60,12 +60,12 @@
           <!-- href="/index.html#hero" local
           href="/Portafolio#hero" host
           -->
-          <li><a href="/Portafolio#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="/Portafolio#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="/Portafolio#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-          <li><a href="/Portafolio#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
-          <li><a href="/Portafolio#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="/Portafolio#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
+          <li><a href="/Portafolio/index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/Portafolio/index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="/Portafolio/index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+          <li><a href="/Portafolio/index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
+          <li><a href="/Portafolio/index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="/Portafolio/index.html#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
