cambio: fotos de testimonio y header icon, modificacion de about description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/c-sharp.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -83,7 +83,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a software engineering student with more than 3 years of experience in the workplace, with C# as the main language. As a professional approach, I always try to be at the forefront in terms of the technologies I handle, as well as, interested in the continuous learning of new technologies and better work practices.</p>
+          <p>I'm a software engineer with more than three years of professional experience with C# as the primary language. As a professional, I always try to be at the forefront of the technologies I usually handle. I'm also interested in continuously learning new technologies and better work practices.
+            <br></br>
+            As a developer, I consider that work challenges are a fundamental part of professional development, which is why I am always looking for new challenges that test my skills and abilities within my work field.
+          </p>
         </div>
 
         <div class="row">
@@ -370,12 +373,12 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                 missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="assets/img/testimonials/testimonials-1.png" class="testimonial-img" alt="">
+                <h3>Angel Acosta</h3>
+                <h4>Digital Banking Analyst</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -383,12 +386,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets/img/testimonials/testimonials-2.png" class="testimonial-img" alt="">
+                <h3>Jorge Ozuna</h3>
+                <h4>Data analyst and Developer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -396,12 +399,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets/img/testimonials/testimonials-3.png" class="testimonial-img" alt="">
+                <h3>Claudio Espinosa</h3>
+                <h4>Software Developer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -409,11 +412,11 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
+                <img src="assets/img/testimonials/testimonials-4.png" class="testimonial-img" alt="">
+                <h3>Garibaldi de Leon</h3>
                 <h4>Freelancer</h4>
               </div>
             </div><!-- End testimonial item -->
