--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -57,15 +57,14 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <!-- href="/index.html#hero" local
-          href="/Portafolio#hero" host
+          <!-- /Portafolio/index.html#hero
           -->
-          <li><a href="/Portafolio/index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="/Portafolio/index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="/Portafolio/index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-          <li><a href="/Portafolio/index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
-          <li><a href="/Portafolio/index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="/Portafolio/index.html#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
+          <li><a href="/index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="/index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+          <li><a href="/index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>          
+          <li><a href="/index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="/index.html#testimonials" class="nav-link scrollto"><i class="bx bxs-quote-alt-left"></i> <span>Testimonials</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
