cambio de fotmato de imagen testimonial 1

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                  missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Angel Acosta</h3>
                 <h4>Digital Banking Analyst</h4>
               </div>
