modificando formato de testimonial 2 y 3

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Jorge Ozuna</h3>
                 <h4>Data analyst and Developer</h4>
               </div>
@@ -402,7 +402,7 @@
                   missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Claudio Espinosa</h3>
                 <h4>Software Developer</h4>
               </div>
@@ -415,7 +415,7 @@
                   missing info
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Garibaldi de Leon</h3>
                 <h4>Freelancer</h4>
               </div>
